tests/facebook_fbs_some/facebook_fbs_some.exp
Error ------------------------------------------------------------------------------------------------------ main.js:2:1

Cannot cast `<fbs />` to string because number [1] is incompatible with string [2]. [incompatible-type]

   main.js:2:1
   2| <fbs /> as string; // Error (the libdef in this test marks fbs as number)
      ^^^^^^^

References:
   flow-typed/fbs.js:1:12
   1| type Fbs = number
                 ^^^^^^ [1]
   main.js:2:12
   2| <fbs /> as string; // Error (the libdef in this test marks fbs as number)
                 ^^^^^^ [2]



Found 1 error
